# atstdlib

./: .gitignore  CMakeLists.txt  README.md  build_n_run.bat  create_package.bat
source/: array.c  atstdlib.h  atstdlib_api.h  atstdlib_array.h  atstdlib_crypt.h  atstdlib_error.h  atstdlib_ext_types.h  atstdlib_linear_allocator.h  atstdlib_list.h  atstdlib_memory.h  atstdlib_regex.h  atstdlib_string.h  atstdlib_strings.h  atstdlib_types.h  crypt.c  linear_allocation.c  list.c  memory.c  regex.c  string.c  strings.c
test/: atstdlib_api.h  atstdlib_array.h  atstdlib_error.h  atstdlib_ext_types.h  atstdlib_linear_allocator.h  atstdlib_memory.h  atstdlib_types.h  test.c
z-linux/scripts/: globals.sh
z-win/: build.bat  run.bat
z-win/scripts/: globals.bat
